--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phaser Game</title>
-    <style>
-      body,
-      html {
-        margin: 0;
-        padding: 10px;
-        overflow: hidden;
-        /* Optional: Prevent scrollbars when the canvas is larger than the viewport */
-      }
-    </style>
-  </head>
 
-  <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.6.0/phaser.min.js"></script>
-      <script src="joy.js"></script>
-    <script src="Game.js"></script>
-      <div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px; position: absolute; bottom: 50px;"></div>
-  </body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Phaser Game</title>
+	<style>
+		html {
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+
+
+			/* Optional: Prevent scrollbars when the canvas is larger than the viewport */
+		}
+
+		body {
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+	</style>
+</head>
+
+<body>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.6.0/phaser.min.js"></script>
+	<script src="Player.js"></script>
+	<script src="joy.js"></script>
+	<script src="Game.js"></script>
+	<div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px; position: absolute; bottom: 50px;"></div>
+</body>
+
 </html>
