add health to allies

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
 <body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.6.0/phaser.min.js"></script>
-	<script src="Player.js"></script>
 	<script src="joy.js"></script>
+	<script src="Player.js"></script>
+	<script src="Allies.js"></script>
 	<script src="Game.js"></script>
 	<div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px; position: absolute; bottom: 50px;"></div>
 </body>
